2017-08-18  Lukas Kluft  <lukas.kluft@gmail.com>

	Improved usabilty of Timer class.

	* typhon/utils/__init__.py (Timer):

	It is possible to pass additional information on the process
	being timed using the `info` keyword. If no information is
	given, a default value depending on the context is used e.g. the
	function name when used as decorator.

	It is also possible to alter the timeformat.

	Removed unnecessary lines and updated docstrings.

2017-08-18  Richard Larsson <ric.larsson@gmail.com>

	* typhon/arts/catalogues.py: Added len for ArrayOfLineRecord.  
	Added __repr__ for CIARecord
	
	* typhon/arts/griddedfield.py: Changed repr to be more informative when
	names are not given.  When you use repr, the true value of None is not
	important.  Also changed so refining grids work for over-dimensioned
	fields (e.g., if you need gridded field for more than one latitude, but 
	field is only available for one latitude, then this can expand it)
	
	* typhon/geodesy/__init__.py:  Bug-fix and added simple line-sphere 
	intersection helper function.
	
2017-08-17  John Mrziglod  <mrzo@gmx.de>

	* typhon/spareice/handlers/__init__.py:

	Added parse_fields() and select() methods.

	* typhon/spareice/datasets/__init__.py

	Added caching in retrieve_time_coverage() method.
	Added AccumulatedData support.
	Added documentation.

	* typhon/spareice/datasets/accumulated_data.py

	Added experimental AccumulatedData class which provides convenient plotting functions.

	* typhon/spareice/handlers/cloudsat.py

	Added field parsing support.

	* typhon/spareice/handlers/cloudsat.py

	Added field parsing support.

	* typhon/spareice/handlers/common.py

	Added AccumulatedData support.

	* typhon/spareice/handlers/tovs.py

	Added field parsing support.
	Fixed slow pixel time interpolation.

	* typhon/spareice/collocations/datasets.py

	Changed collocation finding algorithm.
	Seperated spatial and temporal collocation finding.
	Changed leafsize of k-d trees.